--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   flutter_switch: ^0.3.2
   carousel_slider: ^4.1.1
   flutter_image_slideshow: ^0.1.4
+  smooth_page_indicator: ^1.0.0+2
+  floating_bottom_navigation_bar: ^1.5.2
+  chat_bubbles: ^1.4.0
+  fl_chart: ^0.55.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,6 +71,7 @@ flutter:
 
   assets:
     - assets/Images/
+    - assets/Images/Music/
 
   #   - images/a_dot_ham.jpeg
 
